--- a/_posts/2020-08-28-[mysql]_유저_추가_권한.md
+++ b/_posts/2020-08-28-[mysql]_유저_추가_권한.md
@@ -1,6 +1,6 @@
 ---
 title: mysql, mariadb 유저추가, 권한부여
-tags: git
+tags: mysql, mariadb
 ---
 
 
@@ -17,7 +17,7 @@ create user '아이디'@'%' identified by '비밀번호';
 # DB 권한 부여
 
 ```sh
-grant all privileges ib 데이터베이스.* to '아이디'@'%';
+grant all privileges on 데이터베이스.* to '아이디'@'%';
 ```
 
 
