--- a/_posts/2020-10-29-2.[python][deeplearning]numpy_exp.md
+++ b/_posts/2020-10-29-2.[python][deeplearning]numpy_exp.md
@@ -6,26 +6,15 @@ tags: python deeplearning numpy
 
 # numpy.exp()
 
-64bit OS에서 아나콘다를 사용할 때,
-32bit 가상환경을 만들어야 하는 상황에서
-인터넷에 검색에서 바로 나오는
+지수함수(exponential function) 는
+$$y = a_0 \times a^x$$
+형태의 함수를 말한다.
+</br>
+`numpy.exp()`는 
+$$y = e^x$$
+형태의 밑이 __자연상수__ 인 지수함수이다.
 
-```sh
-set CONDA_FORCE_32BIT=1
-conda create -n py37_32
-```
-
-만 갖고는 제대로된 32bit 환경이 만들어 지지 않음...
-
- 
+$e$는 __자연상수__ 로 대략 2.7182 8182 8590 ... 값을 갖는다. 
 <!--more-->
 
-# 32bit 환경 구축
-
-[여기](https://m.blog.naver.com/PostView.nhn?blogId=haanoon&logNo=221814660104&referrerCode=0&searchKeyword=32)
-블로그에 답이 있다.
-
-
-
-
-
+# numpy.
