--- a/_posts/2020-10-29-2.[python][deeplearning]numpy_exp.md
+++ b/_posts/2020-10-29-2.[python][deeplearning]numpy_exp.md
@@ -1,26 +1,60 @@
 ---
-title: python deeplearning numpy exp
-tags: python deeplearning numpy
+title: python deeplearning sigmoid function
+tags: python deeplearning sigmoid
 ---
 
 
-# numpy.exp()
+# Sigmoid function
 
-__지수함수(exponential function)__ 는
-$$y = a_0 \times a^x$$
-형태의 함수를 말한다.
 
-`numpy.exp()`는 
-$$y = e^x$$
-형태의 밑이 __자연상수__ 인 지수함수이다.
+```chart
+{
+    "type": "line",
+    "data": {
+    "labels": [
+        "January",
+        "February",
+        "March",
+        "April",
+        "May",
+        "June",
+        "July"
+    ],
+    "datasets": [
+        {
+        "label": "# of bugs",
+        "fill": false,
+        "lineTension": 0.1,
+        "backgroundColor": "rgba(75,192,192,0.4)",
+        "borderColor": "rgba(75,192,192,1)",
+        "borderCapStyle": "butt",
+        "borderDash": [],
+        "borderDashOffset": 0,
+        "borderJoinStyle": "miter",
+        "pointBorderColor": "rgba(75,192,192,1)",
+        "pointBackgroundColor": "#fff",
+        "pointBorderWidth": 1,
+        "pointHoverRadius": 5,
+        "pointHoverBackgroundColor": "rgba(75,192,192,1)",
+        "pointHoverBorderColor": "rgba(220,220,220,1)",
+        "pointHoverBorderWidth": 2,
+        "pointRadius": 1,
+        "pointHitRadius": 10,
+        "data": [
+            65,
+            59,
+            80,
+            81,
+            56,
+            55,
+            40
+        ],
+        "spanGaps": false
+        }
+    ]
+    },
+    "options": {}
+}
+```
 
-$e$는 __자연상수__ 로 대략 `2.7182 8182 8590 ...` 값을 갖는다. 
-<!--more-->
-
-# numpy.log()
-
-__로그함수(logarithmic function)__ 는 지수함수의 역함수다.
-$y=a^x$ 의 역함수는 $x=a^y$ 이고 이는 
-$$y=log_2x$$
-로 나타낼 수 있다.
 
