--- a/_posts/2020-11-09-1.[python][deeplearning]sigmoid.md
+++ b/_posts/2020-11-09-1.[python][deeplearning]sigmoid.md
@@ -7,6 +7,9 @@ tags: python deeplearning sigmoid
 # Sigmoid function
 
 
+
+<!--more-->
+
 ```chart
 {
     "type": "line",
@@ -14,7 +17,7 @@ tags: python deeplearning sigmoid
     "labels": [-5.0, -4.9, -4.8, -4.7, -4.6, -4.5, -4.4, -4.3, -4.2, -4.1, -4.0, -3.9, -3.8, -3.7, -3.6, -3.5, -3.4, -3.3, -3.2, -3.1, -3.0, -2.9, -2.8, -2.7, -2.6, -2.5, -2.4, -2.3, -2.2, -2.1, -2.0, -1.9, -1.8, -1.7, -1.6, -1.5, -1.4, -1.3, -1.2, -1.1, -1.0, -0.9, -0.8, -0.7, -0.6, -0.5, -0.4, -0.3, -0.2, -0.1, -0.0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2.0, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4.0, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9],
     "datasets": [
         {
-        "label": "# of bugs",
+        "label": "sigmoid",
         "fill": false,
         "lineTension": 0.1,
         "backgroundColor": "rgba(75,192,192,0.4)",
@@ -33,6 +36,28 @@ tags: python deeplearning sigmoid
         "pointRadius": 1,
         "pointHitRadius": 10,
         "data": [0.007, 0.007, 0.008, 0.009, 0.010, 0.011, 0.012, 0.013, 0.015, 0.016, 0.018, 0.020, 0.022, 0.024, 0.027, 0.029, 0.032, 0.036, 0.039, 0.043, 0.047, 0.052, 0.057, 0.063, 0.069, 0.076, 0.083, 0.091, 0.100, 0.109, 0.119, 0.130, 0.142, 0.154, 0.168, 0.182, 0.198, 0.214, 0.231, 0.250, 0.269, 0.289, 0.310, 0.332, 0.354, 0.378, 0.401, 0.426, 0.450, 0.475, 0.500, 0.525, 0.550, 0.574, 0.599, 0.622, 0.646, 0.668, 0.690, 0.711, 0.731, 0.750, 0.769, 0.786, 0.802, 0.818, 0.832, 0.846, 0.858, 0.870, 0.881, 0.891, 0.900, 0.909, 0.917, 0.924, 0.931, 0.937, 0.943, 0.948, 0.953, 0.957, 0.961, 0.964, 0.968, 0.971, 0.973, 0.976, 0.978, 0.980, 0.982, 0.984, 0.985, 0.987, 0.988, 0.989, 0.990, 0.991, 0.992, 0.993],
+        "spanGaps": false
+        },
+        {
+        "label": "step_func",
+        "fill": false,
+        "lineTension": 0.1,
+        "backgroundColor": "rgba(75,192,192,0.4)",
+        "borderColor": "rgba(75,192,192,1)",
+        "borderCapStyle": "butt",
+        "borderDash": [],
+        "borderDashOffset": 0,
+        "borderJoinStyle": "miter",
+        "pointBorderColor": "rgba(75,192,192,1)",
+        "pointBackgroundColor": "#fff",
+        "pointBorderWidth": 1,
+        "pointHoverRadius": 5,
+        "pointHoverBackgroundColor": "rgba(75,192,192,1)",
+        "pointHoverBorderColor": "rgba(220,220,220,1)",
+        "pointHoverBorderWidth": 2,
+        "pointRadius": 1,
+        "pointHitRadius": 10,
+        "data": [0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 0.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000, 1.000],
         "spanGaps": false
         }
     ]
