--- a/_posts/2020-11-09-1.[python][deeplearning]sigmoid.md
+++ b/_posts/2020-11-09-1.[python][deeplearning]sigmoid.md
@@ -1,14 +1,31 @@
 ---
-title: python deeplearning sigmoid function
+title: python deeplearning sigmoid, stop, ReLU function
 tags: python deeplearning sigmoid
 ---
 
 
-# 활성함수 Sigmoid, step, ReLU function
+# 활성화 함수 Sigmoid, step, ReLU function
 
-
+활성화 함수 python 코드
 
 <!--more-->
+
+python 코드
+
+```python
+    import numpy as np
+
+    def sigmoid(x):
+        return 1 / (1 + np.exp(-x))
+
+    def step_function(x):
+        return np.array(x > 0, dtype=np.int)
+
+    def relu(x):
+        return np.maximum(0, x)
+```
+
+
 
 ```chart
 {
