--- a/_posts/2020-11-14-1.[python][deeplearning]sigmoid.md
+++ b/_posts/2020-11-14-1.[python][deeplearning]sigmoid.md
@@ -1,6 +1,6 @@
 ---
-title: python deeplearning sigmoid, stop, ReLU function
-tags: python deeplearning sigmoid
+title: python deeplearning sigmoid, step, ReLU function
+tags: python deeplearning sigmoid step ReLu
 ---
 
 
