--- a/_posts/2020-11-14-2.[python][deeplearning] 3층 신경망 구현하기.md
+++ b/_posts/2020-11-14-2.[python][deeplearning] 3층 신경망 구현하기.md
@@ -10,6 +10,27 @@ tags: python deeplearning 신경망 neuralnetwork
 
 <!--more-->
 
+```mermaid
+graph LR;
+    x1((x1))--->b1((l1));
+    x2((x2))--->b1((l1));
+    x1--->b2((l2));
+    x2--->b2;
+    x1--->b3((l3));
+    x2--->b3;
+    b1--->c1((c1));
+    b2--->c1;
+    b3--->c1;
+    b1--->c2((c2));
+    b2--->c2;
+    b3--->c2;
+    c1--->y1((y1));
+    c1--->y2((y2));
+    c2--->y1((y1));
+    c2--->y2((y2));
+```
+
+# python 코드
 ```python
 import numpy as np
 from sigmoid import sigmoid
@@ -31,10 +52,10 @@ def forward(network, x):
     W1, W2, W3 = network['W1'], network['W2'], network['W3']
     b1, b2, b3 = network['b1'], network['b2'], network['b3']
 
-    a1 = np.dot(x, W1) + b1
-    z1 = sigmoid(a1)
-    a2 = np.dot(z1, W2) + b2
-    z2 = sigmoid(a2)
+    x1 = np.dot(x, W1) + b1
+    z1 = sigmoid(x1)
+    x2 = np.dot(z1, W2) + b2
+    z2 = sigmoid(x2)
     a3 = np.dot(z2, W3) + b3
     y = a3 # 출력층 활성함수는 다르다. 여기서는 제외.
 
