--- a/_posts/2020-11-16-1.[python][deeplearning] mnist 3층 신경망 구현하기.md
+++ b/_posts/2020-11-16-1.[python][deeplearning] mnist 3층 신경망 구현하기.md
@@ -71,7 +71,7 @@ print("Accuracy:" + str(float(accuracy_cnt)/len(x)))
 2. pickle 파일에 3layer 에 해당하는 가중치와 편향을 가져와 이전 글에서는
 하드코딩 했던 W1~3, b1~3 까지 세팅한다.
 
-3. predict() 이미지 1개에 대해서 추론한다.
+3. predict() 이미지 1개에 대해서 추론(순전파)한다.
 
 ## 출력
 
