Please enter the commit message for your changes. Lines starting

--- a/_memories/2.5-article-header-cover-image.md
+++ b/_memories/2.5-article-header-cover-image.md
@@ -2,6 +2,7 @@
 layout: article
 title: Page - Article Header Image
 cover: /docs/assets/images/axure/page-article-header-cover-image.jpg
+permalink: /memories/1.html
 article_header:
   type: cover
   image:
