modified:   _memories/2.5-article-header-cover-image.md 	modified:   _memories/2015-01-03-article-with-lots-images.md

--- a/_memories/2.5-article-header-cover-image.md
+++ b/_memories/2.5-article-header-cover-image.md
@@ -3,10 +3,10 @@ layout: article
 title: Page - Article Header Image
 cover: /docs/assets/images/axure/page-article-header-cover-image.jpg
 permalink: /memories/1.html
-article_header:
-  type: cover
-  image:
-    src: /docs/assets/images/cover2.jpg
+# article_header:
+#   type: cover
+#   image:
+#    src: /docs/assets/images/cover2.jpg
 ---
 
 A post has an image article header.
